--- a/config.json
+++ b/config.json
@@ -25,5 +25,12 @@
   "conversation_max_tokens": 1000,
   "expires_in_seconds": 3600,
   "character_desc": "你是ChatGPT, 一个由OpenAI训练的大型语言模型, 你旨在回答并解决人们的任何问题，并且可以使用多种语言与人交流。",
-  "subscribe_msg": "感谢您的关注！\n这里是ChatGPT，可以自由对话。\n支持语音对话。\n支持图片输入。\n支持图片输出，画字开头的消息将按要求创作图片。\n支持tool、角色扮演和文字冒险等丰富的插件。\n输入{trigger_prefix}#help 查看详细指令。"
+  "subscribe_msg": "感谢您的关注！\n这里是ChatGPT，可以自由对话。\n支持语音对话。\n支持图片输入。\n支持图片输出，画字开头的消息将按要求创作图片。\n支持tool、角色扮演和文字冒险等丰富的插件。\n输入{trigger_prefix}#help 查看详细指令。",
+  "channel_type": "wechatcom_app",
+  "wechatcom_corp_id": "wwbc8fff8ea176750b", 
+  "wechatcomapp_token": "CoaiKhwJ46Xulf",  
+  "wechatcomapp_port": 9898,  
+  "wechatcomapp_secret": "5g3oAJhNk80O0gWZl9T66KwWWCiVjZid9AKBU2No9K4", 
+  "wechatcomapp_agent_id": "1000002", 
+  "wechatcomapp_aes_key": "UYjt8xQNE3OUPJxpSkwJyc6ap3xIjZyQEbisx7POc8A"
 }
